# secureflex-intel

./: .env.example  .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railpack.json  railway.toml  requirements.txt  setup.py
docs/: DASHBOARD_SPEC.md  lead_generation_strategy.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  auth.tsx  index.css  leaflet-heat.d.ts
secureflex_intel/: __init__.py  __main__.py  ai.py  cli.py  config.py  db.py  dossier.py  email_digest.py  entity_resolver.py
secureflex_intel/api/: __init__.py  server.py
secureflex_intel/sources/: __init__.py  ccs_frameworks.py  ch_streaming.py  charity_commission.py  companies_house.py  contracts_finder.py  digital_marketplace.py  enrichment.py  find_a_tender.py  gazette.py  hse.py  martyns_law.py  planning.py  police_uk.py  sia_acs.py  signals.py
static/: index.html
static/assets/: index-2Ge9CtYL.js  index-B10urSTO.js  index-BDrsZEdN.js  index-BF8AYIOT.js  index-BGXDEAZC.js  index-BHdBlyRB.css  index-Bbq8iEM3.js  index-BuSjqWrQ.css  index-C1gEElah.css  index-C6dyBUiz.js  index-C7tJi4Wu.css  index-CL43FFWL.js  index-CMxYWTcI.css  index-CQ23LdKq.js  index-CQEmOSyx.js  index-CW32A1c4.js  index-CaCQqasS.js  index-Ccs4J75t.css  index-CtNQE6yU.css  index-Cta-dLH7.css  index-CuHjQqui.css  index-DAN_4C5L.css  index-DBuE2bxL.js  index-DU14KKPZ.css  index-DXsz9ohk.css  index-DgarJqWS.js  index-DuQq5cB_.js  index-Dy-FIITq.js  index-TfYQZEK7.css  index-W2-cHS2R.css  index-ajza51mL.js  index-jGjPehPy.js  index-l52lMJUR.css  index-lGvgiBNo.js  (+19 more)
(+22 files in other folders)
